# afm-sim

./: CMakeLists.txt  LICENSE  README.md  afm_line_scan.physeng  engine_description.xml  hopping_animator.physeng  hopping_animator.ui  marcus_and_pois.physeng  marcus_and_pois.ui  mdtopdf.sh  option_dialog.ui
doc/: code-summary.tex  theory.tex
src/: .gitignore  Makefile  afm_marcus.cc  afm_marcus.h  afmmarcus  animator.py  clocking.py  cooldbdesign_1-2-2-1.xml  db-sim-connector.py  hopper.py  lineview.py  main.cc  marcus.py  model.py  phys_engine.cc  phys_engine.h  problem.cc  problem.h  pyqt_import.py  qt_import.py  requirements.txt
src/archive/: waterfall.py
src/python/: .gitignore  afm.py  animator.py  channel.py  clocking.py  db-sim-connector.py  db-sim-connector.spec  hopper.py  lineview.py  marcus.py  model.py  models.py  problem_sample.xml  pyqt_import.py  requirements.txt  tests.py  tip_model.py  viewer.py  waterfall.py
src/python/data/: tip_DB_system.py
src/python/stylesheets/: animator.qss
src/python/tip/: tip_DB_system.py  tip_model.py
src/swig_siqadconn/: .gitignore  swig_generate_and_compile
